addded verify ed pint

--- a/src/index.css
+++ b/src/index.css
@@ -274,6 +274,15 @@ body {
 }
 
 @media (max-width:700px) {
+  .outerBody{
+    height: 100dvh;
+  }
+  .outerHero{
+     height: 100dvh;
+  }
+  .body{
+     height: 100dvh;
+  }
   #heads{
     font-size: 2em;
   }
@@ -314,6 +323,7 @@ margin-bottom: -19rem;
  .menuu{
   display: flex;
  }
+ 
 }
 @media (min-width:501px) {
 
