--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,12 @@ body {
   background: radial-gradient(circle at top, #2b2d77 0%, #0d0e23 70%);
   overflow-x: hidden;
   color: white;
+  height: 100dvh;
 }
 
 .outerBody {
   width: 80%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
 }
@@ -53,7 +54,7 @@ body {
 .body {
   margin-top: 2rem;
   width: 100%;
-  height: 70vh;
+  height: 70dvh;
   display: flex;
   flex-direction: column;
   align-items: center;
