--- a/src/index.css
+++ b/src/index.css
@@ -349,7 +349,7 @@ margin-bottom: -19rem;
   height: 100vh;
   background-color: azure;
 }
-.options{
+/* .options{
   width:80%;
   height: 3.2rem;
   background-color: #0d0e23;
@@ -358,7 +358,7 @@ margin-bottom: -19rem;
  justify-content: center;
  align-items: center;
 
-}
+} */
 .outerform{
   width: 100%;
   height: 100vh;
@@ -398,6 +398,7 @@ top: 0.7rem;
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
+  margin-bottom: 2rem;
 }
 
 .headerHero{
@@ -497,11 +498,81 @@ height: 100%;
   object-fit: cover;
 }
 
-.outerOptionn{
+/* .outerOptionn{
   width: 100%;
   height: 5rem;
   background-color:white;
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+
+/* NAVBAR CONTAINER */
+.navbar {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 60px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  z-index: 1000;
+
+}
+
+/* LOGO */
+.logo {
+  font-size: 26px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 2px;
+}
+
+/* NAV LINKS */
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 35px;
+}
+
+.nav-links li {
+  color: white;
+  font-size: 17px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+  transition: 0.3s ease;
+}
+
+/* Hover Effect */
+.nav-links li:hover {
+  color: #00c6ff;
+}
+
+/* Underline Animation */
+.nav-links li::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  background-color: #00c6ff;
+  transition: 0.3s ease;
+}
+
+.nav-links li:hover::after {
+  width: 100%;
+}
+
+.headerImg2{
+  width: 7rem;
+ 
+}
+.headerImg2 img{
+width: 100%;
+ 
 }
