--- a/src/index.css
+++ b/src/index.css
@@ -407,6 +407,7 @@ top: 0.7rem;
   height: 27rem;
 position: relative;
  margin-top: 2rem;
+
 }
 #clgImg{
  width: 100%;
@@ -489,7 +490,7 @@ font-weight: 800;
   width: 100%;
   height: 100vh;
   color: black;
-
+overflow-y: scroll;
 }
 .eventImg{
   height: 60vh;
@@ -592,4 +593,70 @@ width: 100%;
   display: flex;
  
 
+}
+
+.outerEvents2{
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+}
+.headerHero4{
+  width: 100%;
+  height: 30rem;
+  margin-top: 2rem;
+ display: flex;
+  justify-content: center;
+}
+.headerHero4 img{
+   object-fit: cover;
+  width: 90%;
+  border-radius: 2rem;
+ 
+  
+}
+.complainBtn{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 2.7rem;
+}
+.complainBox{
+  width: 70%;
+  height: 10rem;
+  border: 2px solid black;
+  color: black;
+}
+.complainBox2{
+  width: 100%;
+  height: 14rem;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
+.outerForms{
+ 
+  width: 100%;
+  height: 37rem;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 4rem;
+}
+.innerForm2{
+  width: 80%;
+  height: 80%;
+   border: 2px solid #b9bad5;
+   color: #0d0e23;
+  display: flex;
+  justify-content: center;
+align-items: center;
+border-radius: 1rem;
+}
+
+.innerForm2 form{
+  width: 70%;
+}
+.outerEventss{
+  width: 100%;
+  height: auto;
 }
